[tool.poetry]
name = "repl-nix-mikeddsportfolio"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_mikeddsportfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-restful = "^0.3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
